2013-12-04  Carl Hetherington  <cth@carlh.net>

	* Several optimisations to video processing, which should
	speed up the player a bit.

2013-12-03  Carl Hetherington  <cth@carlh.net>

	* Add "play length" control to avoid having to do arithmetic to
	get end-trims right in some cases (#261).

2013-12-02  Carl Hetherington  <cth@carlh.net>

	* Fix breakage to adding multiple files at the same time.

	* Fix crash on double-click of "show audio" button (#278).

	* Version 1.40 released.

2013-12-02  Carl Hetherington  <cth@carlh.net>

	* Fix problems with FFmpeg files that have all-zero stream IDs.

	* Fix crash on checking non-existing frame info
	files.

	* Fix erroneous disabling of timing panel with
	audio-only sources.

2013-11-30  Carl Hetherington  <cth@carlh.net>

	* Version 1.39 released.

2013-11-30  Carl Hetherington  <cth@carlh.net>

	* Fix windows build.

2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Version 1.38 released.

2013-11-29  Carl Hetherington  <cth@carlh.net>

	* Add option to join input files together
	to help with multiple VOB files from DVDs.

	* Fix build for 32-bit versions of OS X.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.37 released.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.36 released.

2013-11-27  Carl Hetherington  <cth@carlh.net>

	* Version 1.35 released.

2013-11-26  Carl Hetherington  <cth@carlh.net>

	* Updated fr_FR translation from Lilian Lefranc.

	* A whole load of fixes for lots of bugs when handling filenames
	using non-Latin characters on Windows.

2013-11-22  Carl Hetherington  <cth@carlh.net>

	* Version 1.34 released.

2013-11-22  Carl Hetherington  <cth@carlh.net>

	* Fix both OS X and Windows installers.

2013-11-21  Carl Hetherington  <cth@carlh.net>

	* Version 1.33 released.

2013-11-21  Carl Hetherington  <cth@carlh.net>

	* Fix Ubuntu 13.04 build.

2013-11-20  Carl Hetherington  <cth@carlh.net>

	* Version 1.32 released.

2013-11-20  Carl Hetherington  <cth@carlh.net>