@@ -47,6 +47,7 @@ class EncodedData;
 class Writer;
 class Job;
 class ServerFinder;
+class PlayerImage;
 
 /** @class Encoder
  *  @brief Encoder to J2K and WAV for DCP.
@@ -68,7 +69,7 @@ public:
 	 *  @param i Video frame image.
 	 *  @param same true if i is the same as the last time we were called.
 	 */
-	void process_video (boost::shared_ptr<const Image> i, Eyes eyes, ColourConversion, bool same);
+	void process_video (boost::shared_ptr<PlayerImage> i, Eyes eyes, ColourConversion, bool same);
 
 	/** Call with some audio data */
 	void process_audio (boost::shared_ptr<const AudioBuffers>);
